# unicorn_wealth

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Junie_Response.txt  aiosqlite.py  alembic.ini  config.py  guidelines.md  main.py  pybreaker.py  pyproject.toml  registry_report.csv  run_historical_pipeline.py  temp_test_hourly_cycle.py  temp_trigger_cycle.py  test_api.py  troubleshoot.py  unicorn_wealth_session.session
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
core/: config_loader.py  dataframe_registry.py  exc.py  exceptions.py  live_manager.py
database/: sql_engine.py
database/alembic/: env.py  (+1 more)
execution/: consensus_engine.py  position_manager.py  risk_management.py  trade_executor.py
features/: feature_engine.py  live_worker.py
ml_lifecycle/: data_preparer.py  inference.py  live_calculator.py  optimization_space.py  optimizer.py  performance_analyzer.py  registry.py  target_generator.py  trainer.py  validator.py
monitoring/: health_checks.py
reporting/: performance_reporter.py
specifications/: SMC_and_sessions_guidelines.txt  Unicorn_Wealth_API_Reference_Guide.json  Unicorn_Wealth_Feature_Set.json  Unicorn_Wealth_Websocket_Reference_Guide.json  data_ingest.txt  feature_framework.txt  optuna_indicator_ranges.txt  unicorn_wealth_feature_reference.md  unicorn_wealth_feature_set.json
tests/: test_config_loader.py  test_main.py
utils/: diagnostics.py  export_feature_store.py  loc_counter.py  logger.py  time_utils.py
(+79 files in other folders)
