[tool.poetry]
name = "unicorn-wealth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
pandas = "^2.3.2"
numpy = "^2.3.2"
pyarrow = "^21.0.0"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
scikit-learn = "^1.7.1"
catboost = "^1.2.8"
optuna = "^4.5.0"
shap = "^0.48.0"
mlflow = "^3.3.2"
evidently = "^0.7.14"
ta = "^0.11.0"
yfinance = "^0.2.65"
sanpy = "^0.12.3"
apscheduler = "^3.11.0"
aiohttp = "^3.12.15"
requests = "^2.32.5"
websockets = "^15.0.1"
telethon = "^1.41.0"
ccxt = "^4.5.3"
tenacity = "^9.1.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
black = "^25.1.0"
flake8 = "^7.3.0"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
pynvml = "^12.0.0"
psutil = "^7.0.0"
zstandard = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".."]

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "build",
  "dist"
]
max-line-length = 88
